DM-269 admin page endpoints
